# SIGMAS

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  sigmas.sh
.github/workflows/: python-tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  flask.rst  index.rst  sim.rst  utils.rst
sigmas/: __init__.py  run_app.py
sigmas/static/: styles.css
sigmas/templates/: index.html
simulations/: sim.py  utils.py
simulations/inst_pkgs/ELT/: ELT.yaml  LIST_mirrors_ELT.tbl  version.yaml
simulations/inst_pkgs/ELT/tests/: test_TER_properties.py
simulations/inst_pkgs/METIS/: METIS_DET_IMG_N_GeoSnap.yaml  METIS_IMG_N.yaml  METIS_LMS.yaml  default.yaml  template
simulations/inst_pkgs/METIS/docs/example_notebooks/: IFU_Template.ipynb  LSS_AGN-01_preparation.ipynb  LSS_AGN-02_simulation.ipynb  METIS_WCU.ipynb  RawHeaders.ipynb
simulations/inst_pkgs/METIS/headers/: FITS_common_keywords.yaml
simulations/inst_pkgs/METIS/tests/: norun_test_ScopeSim_MET_LSS.py  test_metis.py
src/sigmas/: __init__.py
src/sigmas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sigmas/simulations/: direct_sim.py  donut_sim.py  mock_donut_sim.py  run_sim.py  sim.py  sim.yaml  utils.py
src/sigmas/simulations/donut/: donut.py  donut_List.py  utils.py
src/sigmas/simulations/inst_pkgs/Armazones/: Armazones.yaml  version.yaml
src/sigmas/simulations/inst_pkgs/ELT/: LIST_ELT_combined.tbl
src/sigmas/simulations/inst_pkgs/METIS/: METIS.yaml  (+9 more)
src/sigmas/simulations/python/: raw_script.py  runRecipes.py  run_recipes.py  sources.py
src/sigmas/static/: main.js  styles.css
src/sigmas/templates/: donut.html  ifu.html  img.html  index.html  lss.html  secret_donut.html  welcome.html
tests/: test_flask.py  test_sim.py  test_util.py
(+34 files in other folders)
