[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmas"
version = "0.1.0"
description = "Simulation Interface for Generating METIS Astronomical Spectra"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Benjamin Eisele", email = "benjamin.eisele0101@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "scopesim",
    "scopesim_templates",
    "astropy",
    "numpy",
    "click",
    "sphinx",
]

[project.scripts]
sigmas = "sigmas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sigmas"]