[build-system]
requires = ["setuptools>=69.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmas"
version = "0.1.2a"
description = "Simulation Interface for Generating METIS Astronomical Spectra"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = "GPL-3.0-or-later"
authors = [
    {name = "Benjamin Eisele", email = "benjamin.eisele0101@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "scopesim>=0.9.3",
    "scopesim_templates",
    "click",
    "astrodonut",
    "astropy>=6.0.0",
]

[project.scripts]
sigmas = "sigmas.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sigmas", "sigmas.*"]

[tool.setuptools.package-data]
sigmas = [
    "static/*",
    "static/**/*",
    "templates/*",
    "templates/**/*"
]